add new html files and change navbar

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    Öğretmen Anasayfa
+    Satın alma sayfası
 {% endblock title %}
 
 {% block content %}
-<h3>Öğretmen Anasayfa</h3>
+<h3>Satın alma sayfası</h3>
 <hr>
 {% endblock content %}
