--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    Öğretmen Anasayfa
+     Anasayfa
 {% endblock title %}
 
 {% block content %}
-<h3>Öğretmen Anasayfa</h3>
+<h3> Anasayfa</h3>
 <hr>
 {% endblock content %}
