--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="/">DSFSDF</a>
+    <a class="navbar-brand" href="/">Exam Scheduling</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,13 +9,10 @@
           <a style="margin-left: 10px" class="nav-link" href="/">Ana Sayfa <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">XXX</a>
+          <a class="nav-link" href="/checkout">Satın al</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">XXXX</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">XXXXXX</a>
+          <li class="nav-item">
+          <a class="nav-link" href="/about">Hakkımızda</a>
         </li>
       </ul>
     </div>
