--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    Öğretmen Anasayfa
+    Hakkımızda
 {% endblock title %}
 
 {% block content %}
-<h3>Öğretmen Anasayfa</h3>
+<h3>Hakkımızda</h3>
 <hr>
 {% endblock content %}
