--- a/templates/schooladmin.html
+++ b/templates/schooladmin.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Okul yetkilisi anasayfa</title>
-</head>
-<body>
-    <h3>Yetkili anasayfası</h3>
-</body>
-</html>
+{% extends 'layout.html' %}
+
+{% block title %}
+    Okul Yetkilisi Anasayfa
+{% endblock title %}
+
+{% block content %}
+<h3>Okul Yetkilisi Anasayfa</h3>
+<hr>
+{% endblock content %}
