--- a/templates/student.html
+++ b/templates/student.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Öğrenci anasayfa</title>
-</head>
-<body>
-    <h3>Öğrenci anasayfası</h3>
-</body>
-</html>
+{% extends 'layout.html' %}
+
+{% block title %}
+    Öğrenci Anasayfa
+{% endblock title %}
+
+{% block content %}
+<h3>Öğrenci Anasayfa</h3>
+<hr>
+{% endblock content %}
