Add login and register links to navbar

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,12 @@
-<br>
-<br>
-<br>
-<h3>asd</h3>
+{% extends 'layout.html' %}
+
+{% block title %}
+    Giriş Yap
+{% endblock title %}
+
+{% block content %}
+<h3>Giriş Yap</h3>
+<hr>
+
+
+{% endblock content %}
