--- a/templates/about.html
+++ b/templates/about.html
@@ -7,4 +7,7 @@
 {% block content %}
 <h3>Hakkımızda</h3>
 <hr>
+<h4>Berkay Deniz</h4>
+<h4>Ahmet Faruk Yılmaz</h4>
+<h4>Vahap Gözenelioğlu</h4>
 {% endblock content %}
