implement authentication structure

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,25 @@
-<br>
-<br>
-<br>
-<h3>asd</h3>
+{% extends 'layout.html' %}
+
+{% block title %}
+    Giriş Yap
+{% endblock title %}
+
+{% block content %}
+{% load crispy_forms_tags %}
+
+<div class="row">
+    <div class="col-md-6 offset-md-3">
+        <br>
+        <h3>Giriş Yap</h3>
+        <hr>
+        <form method="post">
+            {% csrf_token %}
+            {{form|crispy}}
+        
+            <br>
+            <button type="submit" class="btn btn-primary">Giriş Yap</button>
+        
+        </form>
+    </div>
+</div>
+{% endblock content %}
