--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Öğretmen anasayfası</title>
-</head>
-<body>
-    <h3>Öğretmen anasayfası</h3>
-</body>
-</html>
+{% extends 'layout.html' %}
+
+{% block title %}
+    Öğretmen
+{% endblock title %}
+
+{% block content %}
+<br>
+<h3>Öğretmen Ana Sayfası</h3>
+<hr>
+
+{% endblock content %}
