--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -9,4 +9,12 @@
 <h3>Öğretmen Ana Sayfası</h3>
 <hr>
 
+    <button type="button">
+        <a href="{% url 'teacher_changeExamDetails' %}">Sınav detaylarını değiştir!</a>
+    </button>
+
+    <button type="button">
+        <a href="{% url 'teacher_viewExamDetails' %}">Sınav detaylarını görüntüle!</a>
+    </button>
+
 {% endblock content %}
