add session control

--- a/templates/schooladmin.html
+++ b/templates/schooladmin.html
@@ -9,11 +9,11 @@
 <hr>
 
     <button type="button">
-        <a href="{% url 'schooladmin_uploadStudentList' %}">Sınıf listesi yükle!</a>
+        <a href="#">Sınıf listesi yükle!</a>
     </button>
 
     <button type="button">
-        <a href="{% url 'create-schedule' %}">Sınav takvimi oluştur!</a>
+        <a href="#">Sınav takvimi oluştur!</a>
     </button>
 
 
