--- a/templates/student.html
+++ b/templates/student.html
@@ -10,10 +10,10 @@
 
 
     <button type="button">
-        <a href="{% url 'student_viewExamDetails' %}">Sınav detayları!</a>
+        <a href="#">Sınav detayları!</a>
     </button>
 
     <button type="button">
-        <a href="{% url 'student_changePassword' %}">Şifreni değiştir</a>
+        <a href="#">Şifreni değiştir</a>
     </button>
 {% endblock content %}
