--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -10,11 +10,11 @@
 <hr>
 
     <button type="button">
-        <a href="{% url 'teacher_changeExamDetails' %}">Sınav detaylarını değiştir!</a>
+        <a href="#">Sınav detaylarını değiştir!</a>
     </button>
 
     <button type="button">
-        <a href="{% url 'teacher_viewExamDetails' %}">Sınav detaylarını görüntüle!</a>
+        <a href="#">Sınav detaylarını görüntüle!</a>
     </button>
 
 {% endblock content %}
