--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,38 +1,40 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="/">Exam Scheduling</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarCollapse"
-    aria-controls="navbarCollapse"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a style="margin-left: 10px" class="nav-link" href="/"
-          >Ana Sayfa <span class="sr-only">(current)</span></a
-        >
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/checkout">Satın al</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/about">Hakkımızda</a>
-      </li>
-      <li class="nav-item">
-        <a  class="nav-link" href="/login">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/register">Register</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/upload">Upload Students(Test)</a>
-      </li>
-    </ul>
-  </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">Exam Scheduling</a>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item active">
+      <a class="nav-link" href="/">Ana Sayfa</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="/checkout">Satın Al</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="/about">Hakkımızda</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" href="/upload">Upload Students(Test)</a>
+    </li>
+  </ul>
+  <ul class="navbar-nav ml-auto">
+    {% if request.user.is_authenticated %}
+    <li class="nav-item dropdown active">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        {{ request.user.username}}
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <a class="dropdown-item" href="#">Profil</a>
+        <a class="dropdown-item" href="/logout">Çıkış Yap</a>
+      </div>
+    </li>
+    {%else %}
+    <li class="nav-item active">
+      <a class="nav-link active" href="/login">Giriş Yap</a>
+    </li>
+    <li class="nav-item active">
+      <a class="nav-link active" href="/register">Kayıt Ol</a>
+    </li>
+    {% endif %}
+
+    
+    
+  </ul>
 </nav>
