add buttons and fix broken links

--- a/templates/student.html
+++ b/templates/student.html
@@ -10,10 +10,10 @@
 
 
     <button type="button">
-        <a href="#">Sınav detayları!</a>
+        <a href="/student/view-exam-details/">Sınav detayları!</a>
     </button>
 
     <button type="button">
-        <a href="#">Şifreni değiştir</a>
+        <a href="/student/change-password">Şifreni değiştir</a>
     </button>
 {% endblock content %}
