--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -10,11 +10,11 @@
 <hr>
 
     <button type="button">
-        <a href="#">Sınav detaylarını değiştir!</a>
+        <a href="/teacher/change-exam-details/">Sınav detaylarını değiştir!</a>
     </button>
 
     <button type="button">
-        <a href="#">Sınav detaylarını görüntüle!</a>
+        <a href="/teacher/view-exam-details/">Sınav detaylarını görüntüle!</a>
     </button>
 
 {% endblock content %}
