--- a/templates/schooladmin.html
+++ b/templates/schooladmin.html
@@ -9,11 +9,11 @@
 <hr>
 
     <button type="button">
-        <a href="#">Sınıf listesi yükle!</a>
+        <a href="/schooladmin/upload-student-list/">Sınıf listesi yükle!</a>
     </button>
 
     <button type="button">
-        <a href="#">Sınav takvimi oluştur!</a>
+        <a href="/schooladmin/create-schedule/">Sınav takvimi oluştur!</a>
     </button>
 
 
