--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -11,7 +11,7 @@
       <a class="nav-link active" href="/about">Hakkımızda</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="/upload">Upload Students(Test)</a>
+      <a class="nav-link active" href="/schooladmin/upload-student-list">Upload Students(Test)</a>
     </li>
   </ul>
   <ul class="navbar-nav ml-auto">
