--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,9 +10,12 @@
     <li class="nav-item">
       <a class="nav-link active" href="/about">Hakkımızda</a>
     </li>
+    {% if request.user.is_authenticated %}
     <li class="nav-item">
       <a class="nav-link active" href="/schooladmin/upload-student-list">Upload Students(Test)</a>
     </li>
+    {%endif%}
+    
   </ul>
   <ul class="navbar-nav ml-auto">
     {% if request.user.is_authenticated %}
@@ -20,9 +23,9 @@
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         {{ request.user.username}}
       </a>
-      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="#">Profil</a>
-        <a class="dropdown-item" href="/logout">Çıkış Yap</a>
+      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+        <a class="dropdown-item" href="#"><i class="far fa-user"></i>Profil</a>
+        <a class="dropdown-item" href="/logout"><i class="fas fa-power-off"></i>Çıkış Yap</a> 
       </div>
     </li>
     {%else %}
