--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,9 @@
-{% extends 'layout.html' %} {% block title %} Upload {% endblock title %} 
-{%block content %}
-{% load crispy_forms_tags %}
+{% extends 'layout.html' %} {% block title %} Upload {% endblock title %}
+{%block content %} {% load crispy_forms_tags %} {% load static%}
+
+<head>
+  <link rel="stylesheet" href="{% static 'css/style.css'%}" />
+</head>
 
 <div class="row">
   <div class="col-md-6 offset-md-3">
@@ -8,11 +11,14 @@
     <h3>Öğrenci Listesi Yükle</h3>
     <hr />
     <form method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-      {{form|crispy}}
-      <input type="file" name="document" />
-      <button type="submit">Öğrenci Listesi Yükle</button>
+      {% csrf_token %} {{form|crispy}}
+      
+      <input type="file" name="document"/>
+      <button type="submit" class="btn btn-primary">
+        Öğrenci Listesi Yükle
+      </button>
     </form>
     <div></div>
     {% endblock content %}
-
+  </div>
+</div>
