Exam form implementation

--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -17,4 +17,8 @@
         <a href="/teacher/view-exam-details/">Sınav detaylarını görüntüle!</a>
     </button>
 
+    <button type="button">
+        <a href="/teacher/create-exam/">Sınav oluştur</a>
+    </button>
+
 {% endblock content %}
