--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">Exam Scheduling</a>
+  <a class="navbar-brand" href="/">Exam Scheduling</a>
   <ul class="navbar-nav mr-auto">
     <li class="nav-item active">
       <a class="nav-link" href="/">Ana Sayfa</a>
