profile page added

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -21,7 +21,7 @@
         {{ request.user.username}}
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="#">Profil</a>
+        <a class="dropdown-item" href="/profile">Profil</a>
         <a class="dropdown-item" href="/logout">Çıkış Yap</a>
       </div>
     </li>
