--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,6 +7,16 @@
 
 
 {% block content %}
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+        {{ message }}
+    </div>
+    {% endfor %}
+</ul>
+{% endif %}
     <h3>Anasayfa</h3>
 <hr>
     <div class = "container-fluid">
