--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,16 @@
 
 {% block content %}
 {% load crispy_forms_tags %}
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+        {{ message }}
+    </div>
+    {% endfor %}
+</ul>
+{% endif %}
 
 <div class="row">
     <div class="col-md-6 offset-md-3">
