--- a/templates/schooladmin.html
+++ b/templates/schooladmin.html
@@ -5,6 +5,16 @@
 {% endblock title %}
 
 {% block content %}
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+        {{ message }}
+    </div>
+    {% endfor %}
+</ul>
+{% endif %}
 <h3>Okul Yetkilisi Anasayfa</h3>
 <hr>
 
