--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -5,7 +5,16 @@
 {% endblock title %}
 
 {% block content %}
-<br>
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+        {{ message }}
+    </div>
+    {% endfor %}
+</ul>
+{% endif %}
 <h3>Öğretmen Ana Sayfası</h3>
 <hr>
 
