Add register school ,improvements on view and form classes.

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -5,7 +5,7 @@
       <a class="nav-link" href="/">Ana Sayfa</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="/checkout">Satın Al</a>
+      <a class="nav-link active" href="/register-school">Okul Kaydet</a>
     </li>
     <li class="nav-item">
       <a class="nav-link active" href="/about">Hakkımızda</a>
