--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -25,6 +25,7 @@
       </a>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
         <a class="dropdown-item" href="/profile"><i class="far fa-user"></i>Profil</a>
+        <a class="dropdown-item" href="/reset-password"><i class="fas fa-key"></i>Şifre Sıfırla</a>
         <a class="dropdown-item" href="/logout"><i class="fas fa-power-off"></i>Çıkış Yap</a> 
       </div>
     </li>
