--- a/templates/passwordresetdone.html
+++ b/templates/passwordresetdone.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block title %}
-    Giriş Yap
+    Şifre Sıfırla
 {% endblock title %}
 
 {% block content %}
@@ -20,19 +20,9 @@
 <div class="row">
     <div class="col-md-6 offset-md-3">
         <br>
-        <h3>Giriş Yap</h3>
+        <h3>Şifre Sıfırla</h3>
         <hr>
-        <form method="post">
-            {% csrf_token %}
-            {{form|crispy}}
-            <div>
-                <a href="/reset-password/">Şifre Sıfırla</a>
-            </div>
-        
-            <br>
-            <button type="submit" class="btn btn-primary">Giriş Yap</button>
-        
-        </form>
+        Şifre Sıfırlama Linki Mail Adresinize Gönderilmiştir 
     </div>
 </div>
 {% endblock content %}
