add DateTime picker widget and improve functionality of ExamForm

--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,7 @@
 {% endblock title %}
 
 {% block content %}
+    {% load crispy_forms_tags %}
 {% if messages %}
 <ul class="messages">
     {% for message in messages %}
