implement schedule page

--- a/templates/schooladmin.html
+++ b/templates/schooladmin.html
@@ -21,7 +21,7 @@
     </button>
 
     <button type="button">
-        <a href="/schooladmin/create-schedule/">Sınav takvimi oluştur!</a>
+        <a href="/schooladmin/schedule/">Sınav takvimi oluştur!</a>
     </button>
 
 
