--- a/templates/registerschool.html
+++ b/templates/registerschool.html
@@ -3,7 +3,7 @@
 {% if messages %}
 <ul class="messages">
     {% for message in messages %}
-    <div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>
+    <div {% if message.tags %} id="msg" class="alert alert-{{ message.tags }}"{% endif %}>
         {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
         {{ message }}
     </div>
