--- a/templates/sittingPlan.html
+++ b/templates/sittingPlan.html
@@ -15,7 +15,7 @@ button {
 {% if messages %}
 <ul class="messages">
     {% for message in messages %}
-    <div {% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>
+    <div {% if message.tags %} id = "msg" class="alert alert-{{ message.tags }}"{% endif %}>
         {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
         {{ message }}
     </div>
