complete create schedule

--- a/templates/schooladmin_schedule.html
+++ b/templates/schooladmin_schedule.html
@@ -77,7 +77,7 @@
           {{form|crispy}}
       
           <br>
-          <button type="button" class="btn btn-primary">Oluştur</button>
+          <button type="submit" class="btn btn-primary">Oluştur</button>
       
       </form>
       </div>
