student detail page fix

--- a/templates/student.html
+++ b/templates/student.html
@@ -20,7 +20,7 @@
 
 
     <button type="button">
-        <a href="/student/view-schedules/">Sınav detayları!</a>
+        <a href="/student/schedule/">Sınav detayları!</a>
     </button>
 
     <button type="button">
