add delete functions & update exams page

--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -19,15 +19,7 @@
 <hr>
 
     <button type="button">
-        <a href="/teacher/change-exam-details/">Sınav detaylarını değiştir!</a>
-    </button>
-
-    <button type="button">
-        <a href="/teacher/view-exam-details/">Sınav detaylarını görüntüle!</a>
-    </button>
-
-    <button type="button">
-        <a href="/teacher/create-exam/">Sınav oluştur</a>
+        <a href="/teacher/exam/">Sınavlar</a>
     </button>
 
 {% endblock content %}
