add background images

--- a/templates/student.html
+++ b/templates/student.html
@@ -17,13 +17,17 @@
 {% endif %}
 <h3>Öğrenci Anasayfa</h3>
 <hr>
+<style>
+body {
+  background-image: url('https://i.pinimg.com/originals/3d/38/4d/3d384d829dbf4b678cfea617114e149d.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
 
-
-    <button type="button">
+    <button type="button" style="background-color: aliceblue">
         <a href="/student/schedule/">Sınav detayları!</a>
     </button>
 
-    <button type="button">
-        <a href="/student/change-password">Şifreni değiştir</a>
-    </button>
 {% endblock content %}
