--- a/templates/student_schedule_details.html
+++ b/templates/student_schedule_details.html
@@ -24,7 +24,14 @@ button {
 </ul>
 {% endif %}
 
-
+<style>
+body {
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzWcX4ZmB6lCNzlnseyE4B7QyUBW_YCW8hDw&usqp=CAU');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
 
 <div class="container">
 
