--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -17,8 +17,16 @@
 {% endif %}
 <h3>Öğretmen Ana Sayfası</h3>
 <hr>
+<style>
+body {
+  background-image: url('https://i.pinimg.com/originals/3d/38/4d/3d384d829dbf4b678cfea617114e149d.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
 
-    <button type="button">
+    <button type="button" style="background-color: aliceblue">
         <a href="/teacher/exam/">Sınavlar</a>
     </button>
 
